syntax = "proto3";

option java_package = "com.example.grpc_demo";
option java_outer_classname = "UserProto";

message UserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string umur = 4;
}

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}
